# engram

./: .envrc  .gitignore  AGENTS.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: release-gate.yml  release.yml  test.yml
docs/: lessons.md
docs/agent-context/: engineering-principles.md  principles.md
docs/evaluation/: codex-corpus-protocol.md
docs/implementation/: 00-implementation-index.md  01-documentation-system.md  02-repository-map.md  03-agent-inventory.md  04-minimum-memory-slice.md  05-local-vault-recovery.md  06-arc-context-assembly.md  07-codex-corpus-validation.md
docs/plans/: 2026-04-16-basic-working-app-plan.md  2026-04-16-engram-weft-vault-alignment-plan.md  2026-04-16-initial-skeleton-validation-plan.md  2026-04-16-weft-background-and-llm-integration-plan.md  2026-04-17-engram-thin-over-weft-runtime-plan.md  2026-04-18-codex-jsonl-corpus-validation-plan.md  2026-04-18-memory-benchmark-harness-plan.md  2026-04-21-codex-corpus-validation-implementation-plan.md  2026-04-22-engram-foundation-excellence-plan.md  2026-04-23-anchored-recall-api-plan.md  2026-04-23-api-vocabulary-process-set-importance-plan.md  2026-04-23-github-pages-simple-index-plan.md  2026-04-23-hybrid-memory-id-generator-plan.md  2026-04-23-layering-cleanup-plan.md  2026-04-23-record-importance-plan.md  2026-04-23-release-helper-windows-display-path-plan.md  2026-04-23-release-tooling-port-plan.md  2026-04-23-simplebroker-style-backend-foundation-plan.md  2026-04-23-support-anchored-summary-mids-plan.md  2026-04-23-windows-status-path-and-release-plan.md  2026-07-01-weft-simplebroker-dependency-refresh-plan.md
docs/specs/: 00-specs-index.md  10-minimum-memory-model.md  11-minimum-write-search-context-slice.md  12-local-app-surface.md  13-context-assembly-and-arcs.md  14-embedded-weft-execution-model.md  15-foundation-contracts-and-invariants.md
engram/: __init__.py  _constants.py  _exceptions.py  _internal_tasks.py  _models.py  background.py  cli.py  client.py
engram/commands/: __init__.py  memory.py
engram/core/: __init__.py  coalesce.py  context.py  embeddings.py  llm_tasks.py  memory.py  scoring.py
engram/dogfood/: __init__.py  codex_jsonl.py  codex_replay.py
engram/index/: __init__.py  lance.py
engram/runtime/: __init__.py  weft.py
engram/store/: __init__.py  base.py  core.py  db.py  factory.py  id_generator.py  pathing.py  sqlite.py
engram/store/_sql/: __init__.py  (+2 more)
tests/: conftest.py  test_background.py  test_constants.py  test_resource_cleanup.py
tests/architecture/: test_import_boundaries.py
tests/cli/: test_cli.py
tests/client/: test_client.py
tests/commands/: test_memory_commands.py
tests/core/: test_coalesce.py  test_context.py  test_llm_tasks.py  test_memory.py  test_recall.py  test_scoring.py
tests/dogfood/: test_codex_jsonl_parser.py  test_codex_replay.py
tests/fixtures/: resource_cleanup.py  state_inspection.py  validation_corpus.py
tests/index/: test_lance.py
tests/store/: test_memory_ids.py  test_recall_containment.py  test_sqlite.py
tests/system/: test_github_pages_index.py  test_release_script.py
(+14 files in other folders)
